@@ -1,3 +1,8 @@
+2005-10-21  Bernd Eidenschink  <eide@users.sf.net>
+
+	* tests/images/: re-added files as binaries.
+	* tests/ns_info.test: minor fix for test 2.27.1
+
 2005-10-20  Stephen Deasey  <sdeasey@users.sf.net>
 
 	* nsd/modload.c (Ns_ModuleLoad): Although the first two arguments
